refs #36: Require 6.5.0 <= Node.js < 7.0.0

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@screeps/storage": "2.0.1"
   },
   "engines": {
-    "node": ">=6.5.0",
+    "node": "^6.5.0",
     "npm": ">=3.10.3"
   }
 }
