--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "2.12.2",
+  "version": "3.0.0-beta.2",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -15,11 +15,11 @@
   "dependencies": {
     "@screeps/backend": "2.4.1",
     "@screeps/common": "2.6.0",
-    "@screeps/driver": "3.2.1",
-    "@screeps/engine": "2.12.0",
-    "@screeps/launcher": "2.2.0",
+    "@screeps/driver": "4.0.0-beta.2",
+    "@screeps/engine": "3.0.0-beta.2",
+    "@screeps/launcher": "3.0.0-beta.1",
     "@screeps/pathfinding": "0.4.16",
-    "@screeps/storage": "3.1.4"
+    "@screeps/storage": "4.0.0-beta.1"
   },
   "engines": {
     "node": ">=6.5.0",
