--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "3.0.0-beta.11",
+  "version": "3.0.0",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -15,11 +15,11 @@
   "dependencies": {
     "@screeps/backend": "2.4.1",
     "@screeps/common": "2.7.0",
-    "@screeps/driver": "4.0.0-beta.11",
-    "@screeps/engine": "3.0.0-beta.4",
-    "@screeps/launcher": "3.0.0-beta.4",
+    "@screeps/driver": "4.0.0",
+    "@screeps/engine": "3.0.0",
+    "@screeps/launcher": "3.0.0",
     "@screeps/pathfinding": "0.4.16",
-    "@screeps/storage": "4.0.0-beta.1"
+    "@screeps/storage": "4.0.0"
   },
   "engines": {
     "node": ">=8.10.0",
