--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "3.1.0-beta.6",
+  "version": "3.1.0",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -13,11 +13,11 @@
     "url": "https://github.com/screeps/screeps.git"
   },
   "dependencies": {
-    "@screeps/backend": "2.5.0-beta.2",
-    "@screeps/common": "2.8.0-beta.3",
-    "@screeps/driver": "4.1.0-beta.1",
-    "@screeps/engine": "3.1.0-beta.5",
-    "@screeps/launcher": "3.1.0-beta.1",
+    "@screeps/backend": "2.5.0",
+    "@screeps/common": "2.8.0",
+    "@screeps/driver": "4.1.0",
+    "@screeps/engine": "3.1.0",
+    "@screeps/launcher": "3.1.0",
     "@screeps/pathfinding": "0.4.16",
     "@screeps/storage": "4.0.0"
   },
