--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "3.2.0-beta.1",
+  "version": "3.2.0-beta.3",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -16,7 +16,7 @@
     "@screeps/backend": "2.5.1",
     "@screeps/common": "2.8.1",
     "@screeps/driver": "4.1.0",
-    "@screeps/engine": "3.1.6",
+    "@screeps/engine": "3.2.0-beta.1",
     "@screeps/launcher": "3.1.1",
     "@screeps/pathfinding": "0.4.16",
     "@screeps/storage": "4.0.0"
