--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "3.2.0-beta.3",
+  "version": "3.2.0-beta.4",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -15,7 +15,7 @@
   "dependencies": {
     "@screeps/backend": "2.5.1",
     "@screeps/common": "2.8.1",
-    "@screeps/driver": "4.1.0",
+    "@screeps/driver": "4.2.0-beta.1",
     "@screeps/engine": "3.2.0-beta.1",
     "@screeps/launcher": "3.1.1",
     "@screeps/pathfinding": "0.4.16",
