--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "3.2.0-beta.5",
+  "version": "3.2.0-beta.6",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -15,9 +15,9 @@
   "dependencies": {
     "@screeps/backend": "2.6.0-beta.1",
     "@screeps/common": "2.9.0-beta.1",
-    "@screeps/driver": "4.2.0-beta.2",
-    "@screeps/engine": "3.2.0-beta.2",
-    "@screeps/launcher": "3.1.1",
+    "@screeps/driver": "4.2.0-beta.3",
+    "@screeps/engine": "3.2.0-beta.3",
+    "@screeps/launcher": "3.2.0-beta.1",
     "@screeps/pathfinding": "0.4.16",
     "@screeps/storage": "4.0.0"
   },
