--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "3.2.1",
+  "version": "3.3.0-beta.1",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -13,11 +13,11 @@
     "url": "https://github.com/screeps/screeps.git"
   },
   "dependencies": {
-    "@screeps/backend": "2.6.0",
+    "@screeps/backend": "2.6.1",
     "@screeps/common": "2.9.0",
-    "@screeps/driver": "4.2.0",
-    "@screeps/engine": "3.2.1",
-    "@screeps/launcher": "3.2.0",
+    "@screeps/driver": "4.2.1",
+    "@screeps/engine": "3.2.2",
+    "@screeps/launcher": "3.3.0",
     "@screeps/pathfinding": "0.4.16",
     "@screeps/storage": "4.0.1"
   },
