--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "3.3.0-beta.1",
+  "version": "3.3.0-beta.3",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -13,13 +13,13 @@
     "url": "https://github.com/screeps/screeps.git"
   },
   "dependencies": {
-    "@screeps/backend": "2.6.1",
-    "@screeps/common": "2.9.0",
-    "@screeps/driver": "4.2.1",
-    "@screeps/engine": "3.2.2",
-    "@screeps/launcher": "3.3.0",
+    "@screeps/backend": "2.7.0-beta.1",
+    "@screeps/common": "2.10.0-beta.1",
+    "@screeps/driver": "4.3.0-beta.1",
+    "@screeps/engine": "3.3.0-beta.1",
+    "@screeps/launcher": "3.3.1",
     "@screeps/pathfinding": "0.4.16",
-    "@screeps/storage": "4.0.1"
+    "@screeps/storage": "4.1.0-beta.1"
   },
   "engines": {
     "node": ">=8.10.0",
