--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "3.4.3",
+  "version": "3.5.0-beta.1",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -13,10 +13,10 @@
     "url": "https://github.com/screeps/screeps.git"
   },
   "dependencies": {
-    "@screeps/backend": "2.7.3",
-    "@screeps/common": "2.11.1",
+    "@screeps/backend": "2.8.0-beta.1",
+    "@screeps/common": "2.12.0-beta.1",
     "@screeps/driver": "4.3.2",
-    "@screeps/engine": "3.3.2",
+    "@screeps/engine": "3.4.0-beta.1",
     "@screeps/launcher": "3.3.4",
     "@screeps/pathfinding": "0.4.16",
     "@screeps/storage": "4.2.1"
