--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "3.5.0-beta.1",
+  "version": "3.5.0-beta.2",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -19,7 +19,7 @@
     "@screeps/engine": "3.4.0-beta.1",
     "@screeps/launcher": "3.3.4",
     "@screeps/pathfinding": "0.4.16",
-    "@screeps/storage": "4.2.1"
+    "@screeps/storage": "4.3.0-beta.1"
   },
   "engines": {
     "node": ">=8.10.0",
