--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "3.5.0-beta.4",
+  "version": "4.0.0-beta.1",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -13,13 +13,13 @@
     "url": "https://github.com/screeps/screeps.git"
   },
   "dependencies": {
-    "@screeps/backend": "2.8.0-beta.1",
+    "@screeps/backend": "3.0.0-beta.1",
     "@screeps/common": "2.12.0-beta.2",
-    "@screeps/driver": "4.3.2",
-    "@screeps/engine": "3.4.0-beta.3",
-    "@screeps/launcher": "3.3.4",
+    "@screeps/driver": "5.0.0-beta.1",
+    "@screeps/engine": "4.0.0-beta.1",
+    "@screeps/launcher": "3.4.0-beta.1",
     "@screeps/pathfinding": "0.4.16",
-    "@screeps/storage": "4.3.0-beta.2"
+    "@screeps/storage": "5.0.0-beta.1"
   },
   "engines": {
     "node": ">=8.10.0",
