--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "4.0.0-beta.7",
+  "version": "4.0.0",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -13,13 +13,13 @@
     "url": "https://github.com/screeps/screeps.git"
   },
   "dependencies": {
-    "@screeps/backend": "3.0.0-beta.3",
-    "@screeps/common": "2.12.0-beta.6",
-    "@screeps/driver": "5.0.0-beta.2",
-    "@screeps/engine": "4.0.0-beta.3",
-    "@screeps/launcher": "4.0.0-beta.1",
+    "@screeps/backend": "3.0.0",
+    "@screeps/common": "2.12.0",
+    "@screeps/driver": "5.0.0",
+    "@screeps/engine": "4.0.0",
+    "@screeps/launcher": "4.0.0",
     "@screeps/pathfinding": "0.4.16",
-    "@screeps/storage": "5.0.0-beta.2"
+    "@screeps/storage": "5.0.0"
   },
   "engines": {
     "node": ">=10.13.0",
