--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@screeps/storage": "5.1.1"
   },
   "engines": {
-    "node": ">=10.13.0",
+    "node": ">=10.13.0 <11.0.0",
     "npm": ">=3.10.3"
   }
 }
