--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "4.1.6",
+  "version": "4.1.7",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -13,7 +13,7 @@
     "url": "https://github.com/screeps/screeps.git"
   },
   "dependencies": {
-    "@screeps/backend": "3.1.1",
+    "@screeps/backend": "^3.1.2",
     "@screeps/common": "2.13.2",
     "@screeps/driver": "5.1.0",
     "@screeps/engine": "4.1.3",
