--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "4.1.10",
+  "version": "4.1.11",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -15,7 +15,7 @@
   "dependencies": {
     "@screeps/backend": "3.1.3",
     "@screeps/common": "2.13.2",
-    "@screeps/driver": "5.1.0",
+    "@screeps/driver": "^5.1.1",
     "@screeps/engine": "4.1.4",
     "@screeps/launcher": "4.0.1",
     "@screeps/pathfinding": "0.4.16",
