--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "4.2.0-beta.2",
+  "version": "4.2.0",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -13,11 +13,11 @@
     "url": "https://github.com/screeps/screeps.git"
   },
   "dependencies": {
-    "@screeps/backend": "3.2.0-beta.1",
-    "@screeps/common": "2.15.0-beta.1",
-    "@screeps/driver": "5.2.0-beta.3",
-    "@screeps/engine": "4.2.0-beta.2",
-    "@screeps/launcher": "4.1.0-beta.1",
+    "@screeps/backend": "3.2.0",
+    "@screeps/common": "2.15.0",
+    "@screeps/driver": "5.2.0",
+    "@screeps/engine": "4.2.0",
+    "@screeps/launcher": "4.1.0",
     "@screeps/pathfinding": "0.4.16",
     "@screeps/storage": "5.1.1"
   },
