--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "4.2.1",
+  "version": "4.2.2",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -13,7 +13,7 @@
     "url": "https://github.com/screeps/screeps.git"
   },
   "dependencies": {
-    "@screeps/backend": "3.2.0",
+    "@screeps/backend": "^3.2.1",
     "@screeps/common": "2.15.0",
     "@screeps/driver": "5.2.0",
     "@screeps/engine": "4.2.1",
