--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "4.2.2",
+  "version": "4.2.3",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -13,10 +13,10 @@
     "url": "https://github.com/screeps/screeps.git"
   },
   "dependencies": {
-    "@screeps/backend": "^3.2.1",
+    "@screeps/backend": "3.2.2",
     "@screeps/common": "2.15.0",
     "@screeps/driver": "5.2.0",
-    "@screeps/engine": "4.2.1",
+    "@screeps/engine": "4.2.2",
     "@screeps/launcher": "4.1.0",
     "@screeps/pathfinding": "0.4.16",
     "@screeps/storage": "5.1.1"
