--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screeps",
-  "version": "4.2.3",
+  "version": "4.2.4",
   "description": "A standalone server for programming game Screeps",
   "main": "package.json",
   "bin": {
@@ -16,7 +16,7 @@
     "@screeps/backend": "3.2.2",
     "@screeps/common": "2.15.0",
     "@screeps/driver": "5.2.0",
-    "@screeps/engine": "4.2.2",
+    "@screeps/engine": "^4.2.3",
     "@screeps/launcher": "4.1.0",
     "@screeps/pathfinding": "0.4.16",
     "@screeps/storage": "5.1.1"
