--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@screeps/backend": "3.2.3",
     "@screeps/common": "2.15.3",
     "@screeps/driver": "5.2.1",
-    "@screeps/engine": "4.2.14",
+    "@screeps/engine": "^4.2.14",
     "@screeps/launcher": "4.1.0",
     "@screeps/pathfinding": "0.4.16",
     "@screeps/storage": "5.1.1"
