--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "screeps": "bin/screeps.js"
   },
   "scripts": {
-    "build": "npm explore @screeps/driver -- npx webpack",
-    "postinstall": "npm explore @screeps/driver -- npx webpack"
+    "postinstall": "cd ../.. npm explore @screeps/driver -- npx webpack"
   },
   "author": "Artem Chivchalov <contact@screeps.com>",
   "license": "ISC",
