💚 fix npm build

--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '10.x'
+          registry-url: 'https://registry.npmjs.org'
       - name: 👷 Install
         run: npm ci
       - name: 📦️ Publish package (npmjs)
