--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -5,8 +5,8 @@ on:
       - '**'
 jobs:
   build:
-    if: contains(github.event.head_commit.message, '🔖')
-    runs-on: ubuntu-20.04
+    # if: contains(github.event.head_commit.message, '🔖')
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
@@ -14,7 +14,7 @@ jobs:
       - name: ⤵️ Checkout
         uses: actions/checkout@v4
       - name: 🔨 Setup node (github registry)
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '10.x'
           registry-url: 'https://registry.npmjs.org'
