--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -18,8 +18,15 @@ jobs:
         with:
           node-version: '10.x'
           registry-url: 'https://registry.npmjs.org'
+      - name: 🔨 Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
       - name: 👷 Install
         run: npm ci
+        env:
+          npm_config_python: python3.10
+          CXXFLAGS: "-include stdexcept -include limits"
       - name: 📦️ Publish package (npmjs)
         if: github.ref_name == 'master'
         run: npm publish
