--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm ci
         env:
           npm_config_python: python3.10
-          CXXFLAGS: "-include stdexcept -include limits"
+          CXXFLAGS: "-include stdexcept -include limits -include utility"
       - name: 📦️ Publish package (npmjs)
         if: github.ref_name == 'master'
         run: npm publish
